--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             }
 
             try {
-                const response = await fetch('https://your-server.com/webapp', {
+                const response = await fetch('https://rat-zealand-governance-desired.trycloudflare.com:8000/webapp', {
                     method: 'GET',
                     headers: {
                         'X-Telegram-Init-Data': tg.initData
