--- a/index.html
+++ b/index.html
@@ -4,62 +4,91 @@
     <title>Telegram WebApp</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
-        pre { background: #f0f0f0; padding: 10px; border-radius: 5px; }
-        .error { color: red; }
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+        }
+        button {
+            background: #0088cc;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            margin: 20px;
+        }
+        #result {
+            margin-top: 20px;
+            padding: 15px;
+            border-radius: 5px;
+            background: #f5f5f5;
+            text-align: left;
+        }
+        .error {
+            color: red;
+        }
     </style>
 </head>
 <body>
-    <h1>Telegram WebApp Demo</h1>
-    <div id="debug"></div>
+    <h1>Мое Telegram приложение</h1>
+    <button id="sendBtn">Отправить данные на сервер</button>
+    <div id="result"></div>
 
     <script>
         const tg = window.Telegram.WebApp;
-        const debugEl = document.getElementById('debug');
-        
+        const btn = document.getElementById('sendBtn');
+        const resultDiv = document.getElementById('result');
+
         // Инициализация WebApp
         tg.expand();
         tg.ready();
 
-        function sendToServer() {
-            if (!tg.initData) {
-                debugEl.innerHTML = '<p class="error">No initData available</p>';
-                return;
-            }
-
-            // Вариант 1: через заголовки
-            fetch('https://rat-zealand-governance-desired.trycloudflare.com:8000/webapp', {
-                method: 'GET',
-                headers: {
-                    'X-Telegram-Init-Data': tg.initData
-                }
-            })
-            .then(response => {
-                if (!response.ok) throw new Error(`HTTP error ${response.status}`);
-                return response.json();
-            })
-            .then(data => {
-                debugEl.innerHTML = `<pre>${JSON.stringify(data, null, 2)}</pre>`;
-            })
-            .catch(error => {
-                debugEl.innerHTML = `<p class="error">Error: ${error.message}</p>`;
-                console.error('Request failed:', error);
-            });
-
-            // Вариант 2: через query параметр (альтернатива)
-            // fetch(`https://rat-zealand-governance-desired.trycloudflare.com:8000/webapp?initData=${encodeURIComponent(tg.initData)}`)
-        }
-
         // Показываем данные пользователя
         if (tg.initDataUnsafe?.user) {
-            debugEl.innerHTML = `
-                <h2>User Info</h2>
+            resultDiv.innerHTML = `
+                <h3>Данные пользователя:</h3>
                 <pre>${JSON.stringify(tg.initDataUnsafe.user, null, 2)}</pre>
-                <button onclick="sendToServer()">Send to Server</button>
             `;
-        } else {
-            debugEl.innerHTML = '<p class="error">WebApp not initialized</p>';
         }
+
+        // Обработчик кнопки
+        btn.addEventListener('click', async () => {
+            try {
+                if (!tg.initData) {
+                    throw new Error('Telegram WebApp не предоставил initData');
+                }
+
+                resultDiv.innerHTML = 'Отправка данных...';
+
+                // Ваш реальный URL сервера вместо localhost
+                const response = await fetch('https://rat-zealand-governance-desired.trycloudflare.com:8000/webapp', {
+                    method: 'GET',
+                    headers: {
+                        'X-Telegram-Init-Data': tg.initData
+                    }
+                });
+
+                if (!response.ok) {
+                    const errorText = await response.text();
+                    throw new Error(`Ошибка сервера: ${errorText}`);
+                }
+
+                const data = await response.json();
+                resultDiv.innerHTML = `
+                    <h3>Ответ сервера:</h3>
+                    <pre>${JSON.stringify(data, null, 2)}</pre>
+                `;
+            } catch (error) {
+                resultDiv.innerHTML = `
+                    <h3 class="error">Ошибка:</h3>
+                    <p>${error.message}</p>
+                    <p>Проверьте консоль для подробностей</p>
+                `;
+                console.error('Ошибка при отправке:', error);
+            }
+        });
     </script>
 </body>
 </html>
