--- a/index.html
+++ b/index.html
@@ -6,87 +6,92 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
             padding: 20px;
+            max-width: 600px;
+            margin: 0 auto;
         }
         button {
             background: #0088cc;
             color: white;
             border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
+            padding: 12px 24px;
+            border-radius: 8px;
             font-size: 16px;
             cursor: pointer;
-            margin: 20px;
+            margin: 20px 0;
+            display: block;
+            width: 100%;
         }
-        #result {
-            margin-top: 20px;
-            padding: 15px;
-            border-radius: 5px;
+        #debug {
             background: #f5f5f5;
-            text-align: left;
+            padding: 15px;
+            border-radius: 8px;
+            margin-top: 20px;
+            white-space: pre-wrap;
+            font-family: monospace;
         }
         .error {
-            color: red;
+            color: #d32f2f;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-    <h1>Мое Telegram приложение</h1>
-    <button id="sendBtn">Отправить данные на сервер</button>
-    <div id="result"></div>
+    <h1>Мой WebApp</h1>
+    <button id="actionBtn">Отправить данные</button>
+    <div id="debug">Нажмите кнопку для отправки...</div>
 
     <script>
         const tg = window.Telegram.WebApp;
-        const btn = document.getElementById('sendBtn');
-        const resultDiv = document.getElementById('result');
+        const btn = document.getElementById('actionBtn');
+        const debug = document.getElementById('debug');
 
         // Инициализация WebApp
         tg.expand();
         tg.ready();
 
-        // Показываем данные пользователя
-        if (tg.initDataUnsafe?.user) {
-            resultDiv.innerHTML = `
-                <h3>Данные пользователя:</h3>
-                <pre>${JSON.stringify(tg.initDataUnsafe.user, null, 2)}</pre>
-            `;
+        // Проверяем доступность данных
+        if (!tg.initData) {
+            debug.innerHTML = '<span class="error">ОШИБКА: Нет данных от Telegram</span>';
+            btn.disabled = true;
+            return;
         }
 
         // Обработчик кнопки
         btn.addEventListener('click', async () => {
             try {
-                if (!tg.initData) {
-                    throw new Error('Telegram WebApp не предоставил initData');
-                }
-
-                resultDiv.innerHTML = 'Отправка данных...';
-
-                // Ваш реальный URL сервера вместо localhost
-                const response = await fetch('https://rat-zealand-governance-desired.trycloudflare.com:8000/webapp', {
-                    method: 'GET',
+                debug.textContent = "Отправка запроса...";
+                
+                // Важно: замените URL на ваш реальный сервер!
+                const SERVER_URL = 'https://your-server.com/webapp';
+                
+                const response = await fetch(SERVER_URL, {
+                    method: 'POST', // Изменили на POST для надежности
                     headers: {
+                        'Content-Type': 'application/json',
                         'X-Telegram-Init-Data': tg.initData
-                    }
+                    },
+                    body: JSON.stringify({
+                        initData: tg.initData,
+                        user: tg.initDataUnsafe?.user
+                    })
                 });
 
                 if (!response.ok) {
-                    const errorText = await response.text();
-                    throw new Error(`Ошибка сервера: ${errorText}`);
+                    throw new Error(`HTTP error! Status: ${response.status}`);
                 }
 
                 const data = await response.json();
-                resultDiv.innerHTML = `
-                    <h3>Ответ сервера:</h3>
+                debug.innerHTML = `
+                    <strong>УСПЕХ!</strong>
                     <pre>${JSON.stringify(data, null, 2)}</pre>
                 `;
             } catch (error) {
-                resultDiv.innerHTML = `
-                    <h3 class="error">Ошибка:</h3>
-                    <p>${error.message}</p>
-                    <p>Проверьте консоль для подробностей</p>
+                debug.innerHTML = `
+                    <span class="error">ОШИБКА:</span>
+                    <pre>${error.message}</pre>
                 `;
-                console.error('Ошибка при отправке:', error);
+                console.error("Full error:", error);
             }
         });
     </script>
